--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,6 +1,3 @@
-gpu:
-  memory_limit:
-
 preprocessing:
   clip_value_min: -100
   clip_value_max: 200
@@ -12,13 +9,16 @@ data:
     random_center: True
 
 model:
-  model_name: "BLRIUnet"
+  model_name: "SLRIUnet"
+  mixed_precision: true
   output_channels: 3
   last_activation: "softmax"
-  n_features: [12, 24, 48, 96, 192]
+  # n_features: [12, 24, 48, 96, 192]
+  n_features: [2, 4, 8, 16, 32]
+  # n_features: [1, 1, 1, 1, 1]
   compile:
     optimizer: "adam"
-    learning_rate: 1e-3
+    learning_rate: 0.001
     # lr_scheduler:
     #   initial_learning_rate: 0.01
     #   decay_steps: 10000
@@ -27,4 +27,4 @@ model:
 
 training:
   epochs: 200
-  batch_size: 4
+  batch_size: 2
