--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -14,6 +14,7 @@ model:
   output_channels: 3
   last_activation: "softmax"
   # n_features: [12, 24, 48, 96, 192]
+  # n_features: [4, 8, 16, 32, 64]
   n_features: [2, 4, 8, 16, 32]
   # n_features: [1, 1, 1, 1, 1]
   compile:
