--- a/configs/config_z3_k5.yaml
+++ b/configs/config_z3_k5.yaml
@@ -1,7 +1,3 @@
-preprocessing:
-  clip_value_min: -100
-  clip_value_max: 200
-
 data:
   patch_size: [64, 64, 64]
   augmentation:
@@ -9,11 +5,11 @@ data:
     random_center: True
 
 model:
-  model_name: "SLRIUnet"
+  model_name: "Unet"
   mixed_precision: true
   output_channels: 3
   kernel_size: 5
-  last_activation: "sigmoid"
+  last_activation: "softmax"
   # n_features: [12, 24, 48, 96, 192]
   n_features: [4, 8, 16, 32, 64]
   # n_features: [2, 4, 8, 16, 32]
@@ -29,4 +25,4 @@ model:
 
 training:
   epochs: 200
-  batch_size: 1
+  batch_size: 2
