--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -10,7 +10,7 @@ data:
     random_center: True
 
 model:
-  model_name: "BLRIUnetLight"
+  model_name: "Unet"
   use_batch_norm: False
   mixed_precision: False
   output_channels: 3
@@ -18,10 +18,10 @@ model:
   last_activation: "softmax"
   linear_upsampling: True
   # n_features: [12, 24, 48, 96, 192]
-  # n_features: [8, 16, 32, 64, 128] # Best results from HP for standard CNN
+  n_features: [8, 16, 32, 64, 128] # Best results from HP for standard CNN
   # n_features: [4, 8, 16, 32, 64]
   # n_features: [2, 4, 8, 16, 32]
-  n_features: [1, 2, 4, 8, 16]
+  # n_features: [1, 2, 4, 8, 16]
   # n_features: [1, 1, 1, 1, 1]
   compile:
     optimizer:
