--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,14 @@
 # external requirements
 click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
-jupyter
 pandas
 scipy
 sympy
 matplotlib
 tqdm
 SimpleITK
-
+python-dotenv
 yapf
-tensorflow==2.4.2
-tensorflow-addons
-keras-tuner
+keras_tuner
 
 # local packages
 -e .
